# Predenergy

./: FIXES_SUMMARY.md  INSTALLATION_GUIDE.md  MIGRATION_SUMMARY.md  README-En.md  README.md  quick_test.py  requirements.txt
.history/: README-En_20250816145021.md  README_20250816144809.md  README_20250816145022.md  README_20250816145046.md  README_ZH_20250815155941.md  requirements_20250412183606.txt
Eval/: evaluate_model.py  evaluator.py
Predenergy/: deep_forecasting_model_base.py  utils.py
common/: constant.py
configs/: predenergy_config.yaml  predenergy_stage_1.yaml  predenergy_stdm_motse.yaml
dataset/: data_pool.py  data_server_base.py  data_source.py  dataset.py
flight/: .gitignore  README.md  bag_record.sh  land.sh  mavros.sh  mavros_bridge.sh  mavros_cmd.sh  run_ego.sh  run_eight.sh  run_formation.sh  run_mocap.sh  run_nlink.sh  run_orbbec.sh  run_realsense.sh  run_swarm_bridge.sh  (+2 more)
flight/px4_ctrl/src/trajectory/: CMakeLists.txt  package.xml
flight/px4_ctrl/src/trajectory/config/: rviz.rviz
flight/px4_ctrl/src/trajectory/include/minco/: minco.hpp  poly_traj_utils.hpp  traj_gen.hpp  traj_opt.h
flight/px4_ctrl/src/trajectory/include/trajectory/: common.h  simulation.h  trajectory.h  visual.h
flight/px4_ctrl/src/trajectory/launch/: traj_gen.launch  traj_test.launch
flight/px4_ctrl/src/trajectory/parameters/: traj.yaml
flight/px4_ctrl/src/trajectory/src/: traj_gen.cpp  traj_test.cpp
flight/px4_ctrl/src/trajectory/src/minco/: traj_opt.cpp
flight/px4_ctrl/src/trajectory/src/trajectory/: common.cpp  simulation.cpp  trajectory.cpp  visual.cpp
(+377 files in other folders)
